--- a/ImageFeed/Storyboards/Base.lproj/LaunchScreen.storyboard
+++ b/ImageFeed/Storyboards/Base.lproj/LaunchScreen.storyboard
@@ -17,17 +17,13 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="VectorLaunchScreen" translatesAutoresizingMaskIntoConstraints="NO" id="a4v-gW-UZe">
-                                <rect key="frame" x="172" y="420" width="70" height="70"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="70" id="T3e-Up-GJq"/>
-                                    <constraint firstAttribute="width" constant="70" id="sow-pe-H92"/>
-                                </constraints>
+                                <rect key="frame" x="169.5" y="409" width="75" height="78"/>
                             </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" red="0.1000011638" green="0.1051724777" blue="0.13482481239999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="a4v-gW-UZe" firstAttribute="centerY" secondItem="6Tk-OE-BBY" secondAttribute="centerY" id="GBD-ah-Bfv"/>
+                            <constraint firstItem="a4v-gW-UZe" firstAttribute="centerY" secondItem="6Tk-OE-BBY" secondAttribute="centerY" constant="-7" id="GBD-ah-Bfv"/>
                             <constraint firstItem="a4v-gW-UZe" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="gHA-2E-0aP"/>
                         </constraints>
                     </view>
