--- a/ImageFeed/Storyboards/Base.lproj/Main.storyboard
+++ b/ImageFeed/Storyboards/Base.lproj/Main.storyboard
@@ -45,7 +45,10 @@
                                                         <constraint firstAttribute="width" constant="42" id="EJ6-zx-M9c"/>
                                                     </constraints>
                                                     <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
-                                                    <state key="normal" image="likeButtonOn"/>
+                                                    <state key="normal" image="likeButtonOff"/>
+                                                    <connections>
+                                                        <action selector="likeButtonClocked" destination="DBY-LF-8Gr" eventType="touchUpInside" id="Flq-8I-xYX"/>
+                                                    </connections>
                                                 </button>
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="GZd-Wk-TZl" userLabel="ContainerView">
                                                     <rect key="frame" x="16" y="166" width="382" height="30"/>
@@ -343,7 +346,7 @@
         <image name="0_full_size" width="1200" height="795"/>
         <image name="auth_screen_logo" width="60" height="60"/>
         <image name="back_button" width="24" height="24"/>
-        <image name="likeButtonOn" width="30" height="26"/>
+        <image name="likeButtonOff" width="30" height="26"/>
         <image name="nav_back_button" width="9" height="16"/>
         <image name="share_button " width="50" height="50"/>
         <image name="tab_editorial_active" width="30" height="30"/>
