--- a/ImageFeed/Storyboards/Base.lproj/Main.storyboard
+++ b/ImageFeed/Storyboards/Base.lproj/Main.storyboard
@@ -252,7 +252,7 @@
         <!--Web View View Controller-->
         <scene sceneID="bzv-Mv-CST">
             <objects>
-                <viewController id="qm8-YX-Bsm" customClass="WebViewViewController" customModule="ImageFeed" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="WebViewViewController" id="qm8-YX-Bsm" customClass="WebViewViewController" customModule="ImageFeed" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Izm-5O-vq1">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
